	- [roms]  $1152: fixed RAM space on Titanium
	- [kevin] $1156: added detection for WinXP with classic theme.
	- [roms]  $1161: fixed window position again (better fix-up)
	- [roms]  $1162: save main window position
	- [roms]  $1163: implementing receive file feature
	- [roms]  $1166: merged Christian Walther's patch for Mac OS-X port.
	- [kevin] $1167: increased link timeout from 10 to 60s.

- 11/04/2005, version 1.80s:
	- [roms]  $1102: fixed old file selector
	- [kevin] $1112: fix incorrect shift of rom_base in handles.c.
	- [kevin] $1112: fix several HW protection bugs which prevented booting TI-89 Titanium AMS 3.01.
	- [kevin] $1112: fix and enable HW2/HW3 FlashROM execution protection.
	- [kevin] $1114: properly step over jsr _bcd_math calls.
	- [roms]  $1116: don't use libtool and fixed UAE makefile for cross-compilign support.
	- [roms]  $1137: fixed clock on HW2
	- [roms]  $1143: fixed preloading of debugger 
	- [roms]  $1145: can sort ROM calls by addr, name or id
	- [roms]  $1146: fix-up window size/position with border size
	- [roms]  $1147: fixed possible bad selection location in mem, stack and code windows
		Fixed source code window: scrolling was somewhat weird/broken.

- 28/03/2005, version 1.80r:
	- [kevin] $1029: merged UAE 0.8.15 from tigcc-dbg branch
	- [roms]  $1030: fixed MSVC compilation and support for new UAE
		Note: there is a post-build lock with gencpu. To fix...
	- [roms]  $1032: added instruction cycle count support
	- [kevin] $1037: restrict to actual speed based on cycle count, not instruction count.
	- [roms]  $1038: fixed Win32 multiple file selector
	- [roms]  $1048: fixed calibration loop (updated on each engine restart)
	- [roms]  $1059: added pgm_entry bkpt support in dbg_cause.c (merged from Kevin's branch)
		need to remove 1 pgm entry bkpt limitation
	- [kevin] $1079: don't start the engine when toggling "Restrict to actual speed" if it was stopped (crash fix).